FIX : Nav links hides behind the animated square on small screen resolutions.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,6 +33,10 @@
   font-weight: 500;
 }
 
+.navbar-nav a{
+  z-index: 5;
+}
+
 .service-card {
   border: 5px solid #fff;
   min-width: 200px;
